Sat, 15 Dec 2007 15:11:46 +0100 <thp@perli.net>
Updated Dutch translation by Pieter De Decker

	* bin/gpodder: We're in development again: "+svn"
	* data/po/nl.po: Updated Dutch translation from Pieter De Decker

Thu, 13 Dec 2007 08:32:54 +0100 <thp@perli.net>
gPodder 0.10.3 "A Stop at Willoughby" released

	* bin/gpodder: gPodder 0.10.3 released :)
	* README: gPodder 0.10.3 released :)
	* doc/man/gpodder.1: gPodder 0.10.3 released :)
	* data/messages.pot: Updated from source
	* data/po/de.po: Updated German translation
	* data/po/*.po: Updated from messages.pot

Thu, 13 Dec 2007 08:02:29 +0100 <thp@perli.net>
Link the gPodder Documentation Wiki from the help pages

	* data/gpodder.glade: Help menu: gPodder Homepage (instead of website)
	and Documentation Wiki (instead of Mailing list)
	* src/gpodder/gui.py: Open gPodder Wiki instead of mailing list page

Wed, 12 Dec 2007 21:39:03 +0100 <thp@perli.net>
Remove TODO file from MANIFEST.in

	* MANIFEST.in: Of course we have to remove non-existing files from the
	MANIFEST.in file, too.. so TODO is now finally gone :)

Wed, 12 Dec 2007 21:30:00 +0100 <thp@perli.net>
Manage TODO list on the gPodder Wiki

	* TODO: Removed; new location: http://gpodderwiki.jottit.com/todo

Wed, 12 Dec 2007 20:55:00 +0100 <thp@perli.net>
Configuration for "old" episodes; automatically remove old episodes

	* src/gpodder/config.py: New boolean auto_remove_old_episodes
	configuration option that defaults to False (remove on startup)
	* src/gpodder/gui.py: Add code to automatically remove old, unplayed
	episodes on startup if the specific configuration options have been
	set; connect config manager to GUI items for the preferences dialog
	* data/gpodder.glade: Add checkbox for automatically removing old,
	unplayed episodes from gPodder on startup and a spinbutton to set the
	amount of days after which an episode is considered "old"

Wed, 12 Dec 2007 19:44:15 +0100 <thp@perli.net>
Merged episode locking patch from Paul Rudkin
