@@ -1,3 +1,11 @@
+Sat, 15 Dec 2007 15:58:23 +0100 <thp@perli.net>
+Merge patch from Leonid Ponomarev to gdfs
+
+	* doc/dev/gdfs/gdfs-init.py: Merge patch from Leonid Ponomarev to add
+	support for the system's native encoding, based on the $LANG
+	environment variable. This should add support for episodes and
+	channels with international characters as titles
+
 Sat, 15 Dec 2007 15:11:46 +0100 <thp@perli.net>
 Updated Dutch translation by Pieter De Decker
 
